<resources>
    <string name="app_name">EstacionAR</string>
    <string name="main_activity_text_view_title">EstacionAR</string>
    <string name="main_activity_button_set_parking">Establecer estacionamientos</string>
    <string name="fragment_configure_parking_lots_title">Establecer estacionamientos</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancelar</string>
    <string name="fragment_configure_parking_lots_tv_hint">Ingrese cantidad de espacios…</string>
    <string name="fragment_configure_parking_lots_toast_empty_input">Por favor ingrese un numero.</string>
    <string name="fragment_configure_parking_lots_toast_confirm">Se establecieron %1$d estacionamientos</string>
    <string name="main_activity_button_new_reservation">Nueva reserva</string>
    <string name="activity_new_reservation_text_view_title">Nueva reserva</string>
    <string name="fragment_reservation_text_view_date_picker_hint">Seleccione una fecha</string>
    <string name="fragment_reservation_text_view_time_picker_hint">Seleccione un horario</string>
    <string name="reservation_activity_button_start_date">Seleccionar inicio</string>
    <string name="reservation_activity_button_end_date">Seleccionar fin</string>
    <string name="reservation_activity_text_view_start_date_hint">Inicio de reserva</string>
    <string name="reservation_activity_text_view_end_date_hint">Fin de reserva</string>
    <string name="reservation_activity_edit_text_lot_number_hint">Ingrese estacionamiento</string>
    <string name="reservation_activity_edit_text_password_hint">Ingrese su clave</string>
    <string name="reservation_view_reservation_saved_toast">Reserva guardada con éxito</string>
    <string name="reservation_view_missing_start_date_toast">Por favor seleccione el inicio de la reserva</string>
    <string name="reservation_view_missing_end_date_toast">Por favor seleccione el fin de la reserva</string>
    <string name="reservation_view_missing_parking_lot_toast">Por favor ingrese el número de estacionamiento</string>
    <string name="reservation_view_missing_user_password_toast">Por favor ingrese su clave</string>
    <string name="reservation_view_lot_not_valid_toast">Por favor ingrese un estacionamiento válido</string>
    <string name="reservation_view_reservation_backwards_toast">El fin de la reserva debe ser después del inicio</string>
    <string name="reservation_view_reservation_overlap_toast">Error: ya hay una reserva en ese espacio y horario</string>
    <string name="main_activity_button_remove_old_reservations">Eliminar reservas antiguas</string>
    <string name="main_activity_reservations_removed_toast">Se borraron las reservas antiguas.</string>
    <string name="main_activity_no_reservations_removed_toast">No hay reservas antiguas para eliminar</string>
    <string name="main_activity_button_show_reservations">Mostrar reservas</string>
    <string name="show_reservations_activity_title">Reservas</string>
    <string name="show_reservations_activity_button_return">Volver</string>
    <string name="show_reservations_activity_text_view_lot_column">Espacio</string>
    <string name="show_reservations_activity_text_view_start_date_column">Fecha de inicio</string>
    <string name="show_reservations_activity_text_view_end_date_column">Fecha de fin</string>
    <string name="reservation_item_text_view_parking_lot"># %1$d</string>
    <string name="reservation_item_text_view_start_date">Inicio: %1$s</string>
    <string name="reservation_item_text_view_end_date">Fin: %1$s</string>
</resources>
