<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_view_main_title"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_text_view_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_set_parking_spaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_activity_button_margin_xsmall"
        android:text="@string/main_activity_button_set_parking"
        app:layout_constraintTop_toBottomOf="@id/text_view_main_title" />

    <Button
        android:id="@+id/button_main_new_reservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_button_new_reservation"
        app:layout_constraintTop_toBottomOf="@id/button_main_set_parking_spaces" />

    <Button
        android:id="@+id/button_main_remove_old_reservations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_button_remove_old_reservations"
        app:layout_constraintTop_toBottomOf="@id/button_main_new_reservation" />

    <Button
        android:id="@+id/button_main_show_reservations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_button_show_reservations"
        app:layout_constraintTop_toBottomOf="@id/button_main_remove_old_reservations" />
</androidx.constraintlayout.widget.ConstraintLayout>
