<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_fragment_configure_parking_lots_padding_size_xsmall"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_view_set_parking_dialog_fragment_title"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_configure_parking_lots_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_dialog_fragment_parking_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_fragment_margin_size_small"
        android:hint="@string/fragment_configure_parking_lots_tv_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_set_parking_dialog_fragment_title" />

    <Button
        android:id="@+id/button_dialog_fragment_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_fragment_margin_size_small"
        android:layout_marginTop="@dimen/dialog_fragment_margin_size_small"
        android:text="@string/button_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_dialog_fragment_parking_input" />

    <Button
        android:id="@+id/button_dialog_fragment_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_fragment_margin_size_small"
        android:layout_marginEnd="@dimen/dialog_fragment_margin_size_small"
        android:text="@string/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_dialog_fragment_parking_input" />
</androidx.constraintlayout.widget.ConstraintLayout>
