<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_item_reservation_parking_lot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_item_text_view_parking_lot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_view_item_reservation_start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_item_reservation_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_item_text_view_start_date"
        app:layout_constraintEnd_toStartOf="@id/text_view_item_reservation_end_date"
        app:layout_constraintStart_toEndOf="@id/text_view_item_reservation_parking_lot"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_item_reservation_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_item_text_view_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_view_item_reservation_start_date"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
